--- a/scss/po-social-media.scss
+++ b/scss/po-social-media.scss
@@ -1,7 +1,7 @@
 .po-social-media {
     width: 100%;
     height: 600px;
-    background: url(/app/img/po-social-media-gackground.png), transparent linear-gradient(270deg, #6696E2 0%, #E27866 100%) 0% 0% no-repeat padding-box;
+    background: url(../img/po-social-media-gackground.png), transparent linear-gradient(270deg, #6696E2 0%, #E27866 100%) 0% 0% no-repeat padding-box;
     background-position: center;
     background-size: cover;
     display: flex;
